--- a/src/blunderbuss/_config/variables.scss
+++ b/src/blunderbuss/_config/variables.scss
@@ -19,12 +19,15 @@ $extra-large : 1280px !default;
 // Font families
 $font-family-base : "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default; // system font stack
 $font-family-secondary : "Roboto Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default; // system font stack
+$font-family-third : "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default; // system font stack
+
 
 // Font sizes (1.6rem value is "16px" equivalent)
 $font-size-small   : 1.2rem !default;
 $font-size-base   : 1.4rem !default;
 $font-size-tall   : 1.8rem !default;
-$font-size-big   : 5.0rem !default;
+$font-size-vtall   : 3.5rem !default;
+$font-size-big   : 4.8rem !default;
 
 // Line heights
 $line-height-s    : 1.3 !default;
@@ -60,6 +63,7 @@ $yellow-hover : #FFBA00;
 $chocolate   : #8F6932 !default;
 $grenadine  : #FF5340 !default;
 $shamrock : #31DC94 !default;
+
 
 
 // Component: links
