--- a/src/scss/typos.scss
+++ b/src/scss/typos.scss
@@ -6,8 +6,14 @@ h1,
     font-size: $font-size-big;
     display: block;
     margin-bottom: 0;
-    &:hover {
-        color: pink;
+    font-weight: 200;
+    font-style: italic;
+    font-family: $font-family-third;
+    a {
+        text-decoration: none;
+        &:hover {
+            
+        }
     }
 }
 
@@ -20,5 +26,21 @@ h1,
 
 p {
     color: $grey;
-    font-size: $font-size-small;
+    font-size: $font-size-base;
+}
+
+@media (max-width:1200px) {
+    h1,
+    .headline,
+    .big-link {
+        font-size: 3.7rem;
+    }
+}
+
+@media (max-width:800px) {
+    h1,
+    .headline,
+    .big-link {
+        font-size: $font-size-tall;
+    }
 }
